[tool.poetry]
name = "rct-power"
version = "0.14.1"
description = ""
authors = ["Felix Stürmer <stuermer@weltenwort.de>"]
license = "MIT"
packages = [
    { include = "rct_power", from = "custom_components" },
]

[tool.poetry.dependencies]
homeassistant = "^2025.2.5"
python = ">=3.13,<3.14"
rctclient = "^0.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.1.2"
homeassistant-stubs = "^2025.2.4"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-emoji = "^0.2.0"
pytest-homeassistant-custom-component = "^0.13.215"
pytest-md = "^0.2.0"
reorder-python-imports = "^3.12.0"
ruff = "^0.9.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportImportCycles = "warning"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
extend-select = [
    "I", # isort
]
