[tool.poetry]
name = "rct-power"
version = "0.14.1"
description = ""
authors = ["Felix Stürmer <stuermer@weltenwort.de>"]
license = "MIT"
packages = [
    { include = "rct_power", from = "custom_components" },
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
homeassistant = "^2025.2.5"
rctclient = "^0.0.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.4"
pytest-emoji = "^0.2.0"
pytest-homeassistant-custom-component = "^0.13.215"
pytest-md = "^0.2.0"
ruff = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportImportCycles = "warning"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
extend-select = [
    "I", # isort
]
