[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "rct-power"
version = "0.14.2"
license = "MIT"
description = ""
authors = [{ name = "Felix Stürmer", email = "stuermer@weltenwort.de" }]
requires-python = ">=3.13"
dynamic = ["classifiers", "dependencies"]

[tool.poetry]
packages = [
    { include = "rct_power", from = "custom_components" },
]

[tool.poetry.dependencies]
python = ">=3.13.2,<3.15"
homeassistant = ">=2025.11.0"
rctclient = "^0.0.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
pytest = "^9.0.0"
pytest-emoji = "^0.2.0"
pytest-homeassistant-custom-component = "^0.13.215"
pytest-md = "^0.2.0"
ruff = "^0.14.11"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportImportCycles = "warning"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
extend-select = [
    "I", # isort
]
